--- a/package.json
+++ b/package.json
@@ -6,17 +6,16 @@
     "test": "echo \"No unit tests and e2e tests yet\" && exit 1"
   },
   "dependencies": {
-    "alt": "0.18.1",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-runtime": "6.3.13",
-    "react": "0.14.3",
+    "react": "^0.14.5",
     "react-dom": "0.14.3",
-    "react-router": "1.0.3"
+    "react-redux": "^4.0.6",
+    "react-router": "1.0.3",
+    "redux": "^3.0.5"
   },
   "devDependencies": {
-    "alt-react": "0.0.1",
-    "alt-utils": "^1.0.0",
     "babel-core": "6.3.26",
     "babel-loader": "6.2.0",
     "babel-plugin-transform-decorators": "^6.3.13",
